--- a/Ares17_Group3/Ares17_Group3.vcxproj.filters
+++ b/Ares17_Group3/Ares17_Group3.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="rt3dObjLoader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="loadBitmap.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SDLmanager.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="rt3dObjLoader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="loadBitmap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
