--- a/Ares17_Group3/Ares17_Group3.vcxproj
+++ b/Ares17_Group3/Ares17_Group3.vcxproj
@@ -168,6 +168,10 @@
     <ClInclude Include="SDLmanager.h" />
     <ClInclude Include="ShaderManager.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="phong-tex.frag" />
+    <None Include="phong-tex.vert" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
