--- a/Ares17_Group3/Ares17_Group3.vcxproj.filters
+++ b/Ares17_Group3/Ares17_Group3.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="loadBitmap.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="hudManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SDLmanager.h">
@@ -62,12 +65,24 @@
     <ClInclude Include="loadBitmap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="main.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="hudManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="phong-tex.frag">
       <Filter>Resource Files</Filter>
     </None>
     <None Include="phong-tex.vert">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="textured.frag">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="textured.vert">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
