--- a/Ares17_Group3/Ares17_Group3.vcxproj.filters
+++ b/Ares17_Group3/Ares17_Group3.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="Bullet.cpp">
       <Filter>Being worked on</Filter>
     </ClCompile>
+    <ClCompile Include="Collisions.cpp">
+      <Filter>Being worked on</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SDLmanager.h">
@@ -105,6 +108,9 @@
       <Filter>Being worked on</Filter>
     </ClInclude>
     <ClInclude Include="Bullet.h">
+      <Filter>Being worked on</Filter>
+    </ClInclude>
+    <ClInclude Include="Collisions.h">
       <Filter>Being worked on</Filter>
     </ClInclude>
   </ItemGroup>
