Saving before I mistakenly delete this branch by mistake Not that the last one I deleted had anything working in it FeelsBadMan

--- a/Ares17_Group3/Ares17_Group3.vcxproj
+++ b/Ares17_Group3/Ares17_Group3.vcxproj
@@ -191,6 +191,9 @@
     <None Include="modelLoading.vert" />
     <None Include="phong-tex.frag" />
     <None Include="phong-tex.vert" />
+    <None Include="simpleShadowMap.frag" />
+    <None Include="simpleShadowMap.gs" />
+    <None Include="simpleShadowMap.vert" />
     <None Include="textured.frag" />
     <None Include="textured.vert" />
   </ItemGroup>
