--- a/Ares17_Group3/Ares17_Group3.vcxproj.filters
+++ b/Ares17_Group3/Ares17_Group3.vcxproj.filters
@@ -22,6 +22,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Shaders\New">
+      <UniqueIdentifier>{989bc0af-18d1-46e4-8db2-5784ad610ed8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -129,6 +132,15 @@
     </None>
     <None Include="modelLoading.frag">
       <Filter>Shaders</Filter>
+    </None>
+    <None Include="simpleShadowMap.frag">
+      <Filter>Shaders\New</Filter>
+    </None>
+    <None Include="simpleShadowMap.gs">
+      <Filter>Shaders\New</Filter>
+    </None>
+    <None Include="simpleShadowMap.vert">
+      <Filter>Shaders\New</Filter>
     </None>
   </ItemGroup>
 </Project>
