--- a/Ares17_Group3/Ares17_Group3.vcxproj.filters
+++ b/Ares17_Group3/Ares17_Group3.vcxproj.filters
@@ -51,9 +51,6 @@
     <ClCompile Include="MeshManager.cpp">
       <Filter>Engine</Filter>
     </ClCompile>
-    <ClCompile Include="SDLmanager.cpp">
-      <Filter>Engine</Filter>
-    </ClCompile>
     <ClCompile Include="ShaderManager.cpp">
       <Filter>Engine</Filter>
     </ClCompile>
@@ -75,11 +72,11 @@
     <ClCompile Include="Player.cpp">
       <Filter>Being worked on</Filter>
     </ClCompile>
+    <ClCompile Include="SDLmanager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="SDLmanager.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="ShaderManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -118,6 +115,9 @@
     </ClInclude>
     <ClInclude Include="Player.h">
       <Filter>Being worked on</Filter>
+    </ClInclude>
+    <ClInclude Include="SDLmanager.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
