--- a/Ares17_Group3/Ares17_Group3.vcxproj.filters
+++ b/Ares17_Group3/Ares17_Group3.vcxproj.filters
@@ -37,6 +37,9 @@
     <Filter Include="Shaders\Unused">
       <UniqueIdentifier>{5d86fb33-3f44-4257-97b9-9cdc7b8be3bf}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Being worked on\February">
+      <UniqueIdentifier>{76cc8627-93b5-433d-a3b6-5babe0b004ac}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -69,13 +72,13 @@
     <ClCompile Include="btShapeManager.cpp">
       <Filter>Being worked on</Filter>
     </ClCompile>
-    <ClCompile Include="Player.cpp">
-      <Filter>Being worked on</Filter>
-    </ClCompile>
     <ClCompile Include="SDLmanager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SoundManager.cpp">
+      <Filter>Being worked on</Filter>
+    </ClCompile>
+    <ClCompile Include="Player.cpp">
       <Filter>Being worked on</Filter>
     </ClCompile>
   </ItemGroup>
@@ -116,9 +119,6 @@
     <ClInclude Include="btShapeManager.h">
       <Filter>Being worked on</Filter>
     </ClInclude>
-    <ClInclude Include="Player.h">
-      <Filter>Being worked on</Filter>
-    </ClInclude>
     <ClInclude Include="SDLmanager.h">
       <Filter>Source Files</Filter>
     </ClInclude>
@@ -126,6 +126,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Projectile.h">
+      <Filter>Being worked on</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
       <Filter>Being worked on</Filter>
     </ClInclude>
   </ItemGroup>
