Fixed sound; still to fix fail safe

--- a/.gitignore
+++ b/.gitignore
@@ -212,3 +212,9 @@ _Pvt_Extensions/
 ModelManifest.xml
 /Ares17_Group3.VC.db
 /Ares17_Group3.VC.VC.opendb
+/Ares17_Group3/Models/Car
+/Ares17_Group3/Sounds
+/Ares17_Group3/Models/Robot
+/Ares17_Group3/Models/low-poly-trees/textures
+/Ares17_Group3/Models/low-poly-trees/source
+/Ares17_Group3/Models/House
